# ros_mqtt_bridge

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  bridge.py  mqtt_bridge.py  package.xml  requirements.txt  ros_bridge.py  setup.py
.github/workflows/: auto_black_format_and_commit.yml
configs/: bridge.yaml
helper/: test_publisher.py  test_server.py  test_service_call.py  test_subscriber.py
launch/: ros_mqtt_bridge.launch
nodes/: ros_mqtt_bridge
param/: bridge.yaml
ros_serializers/: __init__.py  message_converter.py  primitive_serializer.py
scripts/: create_container.bash  entrypoint.sh
src/ros_mqtt_bridge/: __init__.py  field_checker.py  killable_timer.py  mqtt_bridge.py  ros_bridge.py  task_type.py
src/ros_mqtt_bridge/ros_serializers/: __init__.py  custom_serializer.py  message_converter.py
tests/: dummy_mapping.py  test_serializers.py  test_topic_to_topic.py
tests/assets/map_with_laser_bag/: metadata.yaml
tests/configs/: bridge.yaml
tests/scripts/: entrypoint.sh
